<resources>
    <string name="app_name">ChefChatter</string>
    <string name="Connexion">Connexion</string>
    <string name="descriptionMenu">Bienvenue chez ChefChatter! Ici, vous avez la liberté de partager au monde vos recettes ou de vous inspirez de plusieurs chefs de partout à travers le globle!</string>
    <string name="Connexion_Inscription">Pas de compte? Inscrivez-vous ici!</string>
    <string name="voir_Recettes">Parcourir les recettes!</string>

    <string name="btn_Deconexion">Deconnexion</string>
    <string name="btn_ajouter_recette">Ajouter une recette à votre livre</string>
    <string name="btn_modifier_recette">Modifier vos recettes déjà existantes</string>
    <string name="btn_parcourir_recettes">Parcourir les recettes</string>
    <string name="btn_modifier_compte">Modifier votre Compte</string>
    <string name="bonjour">Bonjour %1$s ! Que souhaitez vous faire aujourd\'hui?</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="trouvez_la_recette_parfaite">Trouvez la recette parfaite!</string>
    <string name="recettes_populaires">Recettes populaires</string>
    <string name="voici_les_recettes_les_plus_aim_es_par_les_membres">Voici les recettes les plus aimées par les membres</string>
    <string name="mon_compte">Mon compte</string>
    <string name="retour">Retour</string>
    <string name="voir_toutes_les_recettes">Explorer toutes les recettes</string>
    <string name="liste_des_recettes">Liste des recettes</string>
    <string name="rechercher">Rechercher</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="bienvenue_sur_chefchatter">Bienvenue sur ChefChatter!</string>
    <string name="veuillez_vous_connecter">Veuillez vous connecter</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="retourMain3">Retour</string>
    <string name="date_de_naissanceMain3">Date de naissance</string>
    <string name="adresse_courrielMain3">Adresse courriel</string>
    <string name="pr_nom">Prénom</string>
    <string name="cr_ation_d_un_compte">Création d\'un compte</string>
    <string name="nom_de_famille">Nom de famille</string>
    <string name="ingr_dients">Ingrédients</string>
    <string name="temps_de_cuisson">Temps de cuisson:</string>
    <string name="recette_par">Recette par:</string>
    <string name="pr_paration">Préparation</string>
    <string name="temps_de_pr_paration">Temps de préparation:</string>
    <string name="retourRP">Retour</string>
    <string name="chef">Chef</string>
    <string name="titre_de_la_recette">Titre de la recette</string>
    <string name="_15m">15m</string>
    <string name="_20m">20m</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="annuler">Annuler</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="r_initialisation_du_mot_de_passe">Réinitialisation du mot de passe</string>
    <string name="veuillez_saisir_v_tre_adresse_courriel_afin_de_le_r_initialiser">Veuillez saisir vôtre adresse courriel afin de le réinitialiser</string>
    <string name="confirmer">Confirmer</string>
    <string name="filtres_de_recherches">Filtres de recherches</string>
    <string name="textview">TextView</string>
    <string name="textviewv2">TextView</string>
    <string name="chefchatter">CHEFCHATTER</string>
    <string name="description_du_plat">Description du plat:</string>
    <string name="ingr_dientsDesc">Ingrédients:</string>
    <string name="pr_parationDesc">Préparation:</string>
    <string name="valutation_de_la_recette">Évalutation de la recette</string>
    <string name="commentaire">Commentaire:</string>
    <string name="listez_les_ingredients_s_par_s_par_des_virgules">Listez les ingredients, séparés par des virgules et sans espace</string>
    <string name="ingredient">Ingredients:</string>
    <string name="qt">Qt:</string>
    <string name="envoyer">Envoyer</string>
    <string name="veuillez_laissez_votre_commentaire">Veuillez laissez votre commentaire</string>
    <string name="avis_d_autres_utilisteurs">Avis d\'autres utilisteurs:</string>
    <string name="modifier_le_compte">Modifier le compte</string>
    <string name="supprimer_le_compte">Supprimer le compte</string>
    <string name="adresse_courriel2">Adresse courriel</string>
    <string name="nom_de_famille2">Nom de famille</string>
    <string name="mot_de_passe2">Mot de passe</string>
    <string name="pr_nom2">Prénom</string>
    <string name="nom_d_utilisateur2">Nom d\'utilisateur</string>
    <string name="modification_du_compte">Modification du compte</string>
    <string name="menu">Menu</string>
</resources>