<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeRecette">

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="699dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/liste_des_recettes" />

        <EditText
            android:id="@+id/inputChercherRecette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints=""
            android:hint="@string/rechercher"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields" />

        <ListView
            android:id="@+id/lvListeRecette"
            android:layout_width="match_parent"
            android:layout_height="510dp">

        </ListView>

        <Button
            android:id="@+id/btnAnnulerLR"
            android:layout_width="109dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/annuler"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>